fix: fixing update method and adding spring dev tools